# olympiad_2017

./: CMakeLists.txt  LICENSE  README.md  main.cpp  task_1_1.cpp  task_1_2.cpp  task_1_3.cpp  task_1_4.cpp  task_2_1.cpp  task_2_2.cpp  task_2_3.cpp  task_2_4.cpp
test_files/tour_1_task_1/: 1  2  3
test_files/tour_1_task_2/: 1  2  3
test_files/tour_1_task_3/: 1  3
test_files/tour_1_task_4/: 1  2
test_files/tour_2_task_1/: 3
test_files/tour_2_task_3/: 1
test_files/tour_2_task_4/: 2
